Correction contraste bloc 3

--- a/style.css
+++ b/style.css
@@ -780,7 +780,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(49, 33, 0, 0.5);
+    background-color: rgb(196 132 0);
     padding: 40px 40px 40px 40px;
 }
 
